device model/service updated, client factory service added

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,6 +1,16 @@
 # Please refer https://aka.ms/HTTPSinContainer on how to setup an https developer certificate for your ASP.NET Core service.
 
 services:
+  cron:
+    image: cron
+    build:
+      dockerfile: cron/Dockerfile
+      context: .
+      args:
+        - expression="0 */1 * * *"
+    networks:
+      - purple
+
   db:
     image: postgres
     ports:
